--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "*",
     "react-redux": "*",
     "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "redux": "*",
     "styled-components": "*"
   }
