--- a/package.json
+++ b/package.json
@@ -62,9 +62,11 @@
     "react": "*",
     "react-dom": "*",
     "react-redux": "*",
+    "react-rellax": "^1.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "*",
+    "semantic-ui-react": "^1.0.0",
     "styled-components": "*"
   }
 }
