--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-router-dom": "^5.2.0",
     "redux": "*",
     "semantic-ui-react": "^1.1.0",
+    "slugify": "^1.4.5",
     "styled-components": "*"
   }
 }
